fixed alignment of top/bottom ranked film grids

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -295,6 +295,7 @@ ul.genre-dropdown {
 .pagination-section {
   margin-top: 20px;
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 .pagination-section button {
